# electronicsdb

./: .gitattributes  .gitignore  README.md
src/: CMakeLists.txt  ChoosePartDialog.cpp  ChoosePartDialog.h  CompoundEditCommand.cpp  CompoundEditCommand.h  ConnectDialog.cpp  ConnectDialog.h  ConnectDialog.ui  ConnectionEditWidget.cpp  ConnectionEditWidget.h  ConnectionEditWidget.ui  ContainerEditCommand.cpp  ContainerEditCommand.h  ContainerPartTableModel.cpp  ContainerPartTableModel.h  ContainerRemovePartsCommand.cpp  ContainerRemovePartsCommand.h  ContainerTableItemDelegate.cpp  ContainerTableItemDelegate.h  ContainerTableModel.cpp  ContainerTableModel.h  ContainerWidget.cpp  ContainerWidget.h  ContainerWidget.ui  DatabaseConnection.cpp  DatabaseConnection.h  EditCommand.h  EditStack.cpp  EditStack.h  Filter.cpp  Filter.h  FilterWidget.cpp  FilterWidget.h  FilterWidget.ui  IOException.h  ListingTable.cpp  ListingTable.h  MainApplication.cpp  MainApplication.h  MainWindow.cpp  (+69 more)
src/cmake/: BOOST_LICENSE.txt
src/electronicsdb/: CMakeLists.txt  MainApplication.cpp  MainApplication.h  System.cpp  System.h  edb_config.cmake.h  global.cpp  global.h  main.cpp
src/electronicsdb/command/: CMakeLists.txt  CompoundEditCommand.cpp  CompoundEditCommand.h  DummyEditCommand.cpp  DummyEditCommand.h  EditCommand.cpp  EditCommand.h  EditStack.cpp  EditStack.h  SQLEditCommand.cpp  SQLEditCommand.h
src/electronicsdb/command/sql/: CMakeLists.txt  SQLCommand.cpp  SQLCommand.h  SQLDeleteCommand.cpp  SQLDeleteCommand.h  SQLInsertCommand.cpp  SQLInsertCommand.h  SQLUpdateCommand.cpp  SQLUpdateCommand.h
src/electronicsdb/db/: CMakeLists.txt  DatabaseConnection.cpp  DatabaseConnection.h  DatabaseConnectionWidget.cpp  DatabaseConnectionWidget.h  SQLDatabaseWrapper.cpp  SQLDatabaseWrapper.h  SQLDatabaseWrapperFactory.cpp  SQLDatabaseWrapperFactory.h  SQLTransaction.cpp  SQLTransaction.h
src/electronicsdb/db/common/: CMakeLists.txt  DefaultDatabaseConnection.cpp  DefaultDatabaseConnection.h  DefaultDatabaseConnectionWidget.cpp  DefaultDatabaseConnectionWidget.h  DefaultDatabaseConnectionWidget.ui
src/electronicsdb/db/mysql/: CMakeLists.txt  MySQLDatabaseWrapper.cpp  MySQLDatabaseWrapper.h
src/electronicsdb/db/psql/: CMakeLists.txt  PSQLDatabaseWrapper.cpp  PSQLDatabaseWrapper.h
src/electronicsdb/db/sqlite/: CMakeLists.txt  SQLiteDatabaseConnection.cpp  SQLiteDatabaseConnection.h  SQLiteDatabaseConnectionWidget.cpp  SQLiteDatabaseConnectionWidget.h  SQLiteDatabaseConnectionWidget.ui  SQLiteDatabaseWrapper.cpp  SQLiteDatabaseWrapper.h
src/electronicsdb/exception/: IOException.h  InvalidCredentialsException.h  NoDatabaseConnectionException.h  SQLException.h
src/electronicsdb/gui/: CMakeLists.txt  GUIStatePersister.cpp  GUIStatePersister.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/electronicsdb/gui/container/: CMakeLists.txt  ContainerPartTableModel.cpp  ContainerPartTableModel.h  ContainerTableItemDelegate.cpp  ContainerTableItemDelegate.h  ContainerTableModel.cpp  ContainerTableModel.h  ContainerWidget.cpp  ContainerWidget.h  ContainerWidget.ui
src/electronicsdb/gui/dragndrop/: CMakeLists.txt  DragNDropManager.cpp  DragNDropManager.h  DragObject.cpp  DragObject.h
src/electronicsdb/gui/part/: CMakeLists.txt  ChoosePartDialog.cpp  ChoosePartDialog.h  FilterWidget.cpp  FilterWidget.h  ListingTable.cpp  ListingTable.h  PartCategoryWidget.cpp  PartCategoryWidget.h  PartDisplayWidget.cpp  PartDisplayWidget.h  PartLinkEditWidget.cpp  PartLinkEditWidget.h  PartLinkEditWidget.ui  PartTableModel.cpp  PartTableModel.h  PropertyComboBox.cpp  PropertyComboBox.h  PropertyDateTimeEdit.cpp  PropertyDateTimeEdit.h  PropertyDateTimeEdit.ui  PropertyFileWidget.cpp  PropertyFileWidget.h  PropertyLineEdit.cpp  PropertyLineEdit.h  PropertyMultiValueWidget.cpp  PropertyMultiValueWidget.h  PropertyTextEdit.cpp  PropertyTextEdit.h
src/electronicsdb/gui/settings/: BackupDialog.cpp  BackupDialog.h  BackupDialog.ui  CMakeLists.txt  ConnectDialog.cpp  ConnectDialog.h  ConnectDialog.ui  ConnectionEditWidget.cpp  ConnectionEditWidget.h  ConnectionEditWidget.ui  DatabaseMigrationDialog.cpp  DatabaseMigrationDialog.h  DatabaseMigrationDialog.ui  KeyVaultDialog.cpp  KeyVaultDialog.h  KeyVaultDialog.ui  KeyVaultWidget.cpp  KeyVaultWidget.h  KeyVaultWidget.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui
src/electronicsdb/gui/smodel/: CMakeLists.txt  PartCategoryEditDialog.cpp  PartCategoryEditDialog.h  PartCategoryEditDialog.ui  PartLinkTypeEditDialog.cpp  PartLinkTypeEditDialog.h  PartLinkTypeEditDialog.ui  SQLExecDialog.cpp  SQLExecDialog.h  SQLExecDialog.ui
src/electronicsdb/gui/util/: CMakeLists.txt  ChangelogEntry.cpp  ChangelogEntry.h  ChangelogTableModel.cpp  ChangelogTableModel.h  ChangelogWidget.cpp  ChangelogWidget.h  ChangelogWidget.ui  PlainLineEdit.cpp  PlainLineEdit.h  RichTextItemDelegate.cpp  RichTextItemDelegate.h  SimpleURLDownloader.h  (+1 more)
src/electronicsdb/model/: AbstractPartProperty.cpp  AbstractPartProperty.h  CMakeLists.txt  DatabaseMigrator.cpp  DatabaseMigrator.h  PartCategory.cpp  PartCategory.h  PartLinkType.cpp  PartLinkType.h  PartProperty.cpp  PartProperty.h  PartPropertyMetaType.cpp  PartPropertyMetaType.h  StaticModelManager.cpp  StaticModelManager.h
src/electronicsdb/script/: CMakeLists.txt  ScriptManager.cpp  ScriptManager.h
src/electronicsdb/test/: CMakeLists.txt  TestEventSniffer.cpp  TestEventSniffer.h  TestManager.cpp  TestManager.h  printops.cpp  printops.h  test_global.h  testutil.cpp  testutil.h
src/electronicsdb/util/: CMakeLists.txt  Filter.cpp  Filter.h  KeyVault.cpp  KeyVault.h  Task.cpp  Task.h  elutil.cpp  elutil.h  metatypes.cpp  metatypes.h  tplutil.h
src/icons/: README
src/lua/: CMakeLists.txt
src/qsourcehighlite/: CMakeLists.txt  LICENSE  README.md
src/qtplugins/: CMakeLists.txt
src/qtplugins/mysql/: CMakeLists.txt
src/qtplugins/sqlite/: CMakeLists.txt
src/resources/: resources.qrc  resources_dynamic.cmake.qrc
src/resources/backup/: README.txt
src/resources/doc/: main.md
src/resources/icons/: README
src/zip/: CMakeLists.txt
(+43 files in other folders)
