FIND_PATH(EDB_QSQLITE_SOURCE_PATH qsql_sqlite.cpp)

ADD_LIBRARY(qsqlite SHARED
        "${EDB_QSQLITE_SOURCE_PATH}/qsql_sqlite.cpp"
        "${EDB_QSQLITE_SOURCE_PATH}/smain.cpp"
        sqlite3.c)
SET_TARGET_PROPERTIES(qsqlite PROPERTIES AUTOMOC ON)
TARGET_LINK_LIBRARIES(qsqlite
        Qt${QT_VERSION_MAJOR}::Core
        Qt${QT_VERSION_MAJOR}::Sql
        Qt${QT_VERSION_MAJOR}::SqlPrivate
        )
TARGET_COMPILE_DEFINITIONS(qsqlite PRIVATE
        QT_PLUGIN
        SQLITE_ENABLE_COLUMN_METADATA
        SQLITE_ENABLE_JSON1
        )
TARGET_INCLUDE_DIRECTORIES(qsqlite PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
SET_PROPERTY(TARGET qsqlite PROPERTY RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/plugins/sqldrivers")
SET_PROPERTY(TARGET qsqlite PROPERTY LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/plugins/sqldrivers")

LIST(APPEND EDB_QT_EXTRA_PLUGIN_TARGETS qsqlite)
PROPAGATE_PARENT_SCOPE(EDB_QT_EXTRA_PLUGIN_TARGETS)


INSTALL(TARGETS qsqlite
        RUNTIME DESTINATION bin/plugins/sqldrivers
        LIBRARY DESTINATION bin/plugins/sqldrivers
        )
#INSTALL(TARGETS qsqlite LIBRARY DESTINATION bin/plugins/sqldrivers)
